--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "bootstrap": "sass ./src/scss/bootstrap.scss ./dist/css/bootstrap.css",
+    "bootstrap": "sass ./src/scss/bootstrap.scss ./dist/css/bootstrap.css --style compressed",
+    "bootstrap-js": "npx rollup -c rollup.config.bootstrap.mjs",
     "swiper-css": "sass ./src/scss/swiper.scss ./dist/css/swiper.css",
-    "swiper-js": "npx rollup -c rollup.config.swiper.mjs"
+    "swiper-js": "npx rollup -c rollup.config.swiper.mjs",
+    "validator": "npx rollup -c rollup.config.validator.mjs"
   },
   "author": "",
   "license": "ISC",
